src/tests/fixtures/enums/EnumFromUnionTypeNotStringLiteral.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @GQLType */
class Query {
  /** @GQLField */
  hello: MyEnum;
}

/** @GQLEnum */
type MyEnum = "VALID" | 1;

-----------------
OUTPUT
-----------------
src/tests/fixtures/enums/EnumFromUnionTypeNotStringLiteral.invalid.ts:8:25 - error: Expected `@GQLEnum` enum members to be string literal types. For example: `'foo'`.

If you think Grats should be able to infer this type, please report an issue at https://github.com/captbaritone/grats/issues.

8 type MyEnum = "VALID" | 1;
                          ~
